# gowith-mechinterp

./: .gitignore  DATA.md  Justfile  README.md  pyproject.toml
.github/workflows/: pages.yml
config/: experiment.yaml
data/: items.jsonl
data/runs/: judge_cache.jsonl  np_labels.json  scored.jsonl
data/runs/alt/: generations.jsonl
data/runs/white/: attn_range.json  feature_summary.json  lyapunov.json  pertoken.json  qualitative.json  row_index.json  steer.jsonl  steer_summary.json
data/source/: gowith_canonical.md  gowith_skill.md
data/source/refs/: eos.txt
docs/: explore.html  index.html
infra/: README.md  fetch.sh  gowexp_run.sh  preflight.py  provision.sh  run_remote.sh  setup_remote.sh  sync.sh  teardown.sh
report/: lib.typ  methodology_review.md  report.typ
report/data/: results.json
src/gowexp/: __init__.py  analyze.py  attn_range.py  bedrock.py  build_site.py  closeout.py  conditions.py  explore.py  feature.py  gowith.py  items.py  judge.py  lyapunov.py  mock.py  model.py  pertoken.py  qualitative.py  render.py  run_alt.py  run_black.py  run_white.py  sae.py  schema.py  score.py  scoring.py  selftest.py  steer.py
src/gowexp/tasks/: __init__.py  agency.py  correlative.py  epistemic.py  nonmonotonic.py  observable.py
